# rapsqlite

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.test  LICENSE  README.md  README_TESTING.md  ROADMAP.md  SECURITY.md  docker-reproduce.sh  pyproject.toml  reproduce_ci_failure.sh  test_aiosqlite_compat.py  test_debug_execute_many.py  test_deep_debug_execute_many.py  test_rapsqlite.py  test_row_factory.py
.github/workflows/: CI.yml  publish-existing.yml  publish.yml  security.yml
benchmarks/: README.md  benchmark_suite.py
docs/: ADVANCED.md  AIOSQLITE_COMPATIBILITY_ANALYSIS.md  AIOSQLITE_TEST_RESULTS.md  ASYNC_WITH_EXECUTE_FAILURES_ANALYSIS.md  BACKUP_SQLITE3_CONNECTION_FIX.md  CONNECTION_ACCESS_RESEARCH.md  EXECUTE_MANY_TRANSACTION_ISSUE.md  MIGRATION.md  PLAN_OPTION_A_PHASE_2_7_CALLBACKS.md  PLAN_OPTION_B_SET_PRAGMA_FIX.md  ROADMAP.md  conf.py  requirements.txt
docs/api-reference/: connection.rst  cursor.rst  index.rst  row.rst
docs/guides/: advanced-usage.rst  compatibility.rst  migration-guide.rst
rapsqlite/: __init__.py  _backup_helper.py  _rapsqlite.pyi
scripts/: run_aiosqlite_tests.py  verify_examples.py
src/: connection.rs  context_managers.rs  conversion.rs  cursor.rs  errors.rs  exceptions.rs  lib.rs  parameters.rs  pool.rs  query.rs  row.rs  types.rs  utils.rs
tests/: README.md  conftest.py  test_aiosqlite_compat.py  test_async_with_execute.py  test_callback_errors.py  test_callback_robustness.py  test_concurrency.py  test_concurrent_transactions.py  test_connection_cleanup.py  test_dropin_replacement.py  test_edge_cases.py  test_error_conditions.py  test_init_hook.py  test_integration.py  test_performance.py  test_pool_config.py  test_pool_exhaustion.py  test_prepared_statements.py  test_properties.py  test_row_factory.py  test_schema_operations.py  test_stress.py  test_timeout.py
